Fixed uneven menu-item height on big screens

--- a/src/TriviaQuizMenuItem/TriviaQuizMenuItem.css
+++ b/src/TriviaQuizMenuItem/TriviaQuizMenuItem.css
@@ -18,6 +18,7 @@
     border-radius: 0.6rem;
 
     width: 100%;
+    align-self: stretch;
 }
 .menu-item__title {
     background: var(--purple-bg);
